# Desafio-Ifood

./: README.md  pyproject.toml
notebooks/: Desafio Ifood.ipynb
