[project]
name = "desafio-ifood"
version = "0.1.0"
description = ""
authors = [
    {name = "joaohsilva",email = "joaohasilva416@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pandas (>=2.2.3,<3.0.0)",
    "seaborn (>=0.13.2,<0.14.0)"
]

[tool.poetry]
packages = [{include = "desafio_ifood", from = "src"}]


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
